<resources>
    <!-- FACEBOOK ID -->
    <string name="facebook_application_id" translatable="false">199316630990692</string>

    <!-- FONT ID -->
    <string name="Roboto_Bold" translatable="false">Roboto-Bold</string>
    <string name="Roboto_Medium" translatable="false">Roboto-Medium</string>
    <string name="Roboto_Light" translatable="false">Roboto-Light</string>
    <string name="Roboto_Thin" translatable="false">Roboto-Thin</string>

    <string name="app_name" translatable="false">I\'m OK</string>

    <string name="main_activity_description">Rassurer rapidement</string>

    <string name="login">Connexion</string>
    <string name="menu">Menu</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">i_mok_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Aucune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>

    <!-- MENTOR_CHAT ACTIVITY -->

    <string name="content_description_logo">Logo I\'m OK</string>
    <string name="content_description_image_profil">Image de profile</string>


    <!-- ANIMATION -->
    <string name="animation_main_to_detail" translatable="false">AnimationMainToDetail</string>

    <!-- BOTTOM NAVIGATION VIEW -->

    <!-- DETAIL SCREEN -->
    <string name="toolbar_title_activity_menu">@string/app_name</string>
    <string name="settings">Paramètres</string>

    <string name="fragment_menu_ok_card_item_image_description">Image OKCard</string>
    <string name="fragment_menu_recipient_list_item_image_list">Logo image liste</string>
    <string name="toolbar_title_activity_ok_card">OK Card</string>
    <string name="toolbar_title_activity_recipient_list">Liste destinataire</string>
    <string name="toolbar_title_activity_position_wifi">Localisation WIFI</string>
    <string name="toolbar_title_activity_position_gps">Localisation GPS</string>
    <string name="toolbar_title_activity_maps">Coordonnée sélectionnées</string>
    <string name="cancel">Annuler</string>
    <string name="save">Enregistrer</string>
    <string name="ok_card_image_description">Image de l\'OKCard</string>
    <string name="gps">GPS</string>
    <string name="wifi">WIFI</string>
    <string name="send">Envoyer</string>
    <string name="delete">Supprimer</string>
    <string name="position_image_wifi_description">Image wifi</string>
    <string name="position_image_gps_description">Image gps</string>
    <string name="yes">OUI</string>
    <string name="no">NON</string>
    <string name="title_activity_settings">Settings</string>
    <string name="widget_btn_left">Flèche vers la gauche</string>
    <string name="widget_btn_right">Flèche vers la droite</string>
    <string name="logo_GPS">Logo GPS</string>
    <string name="logo_WIFI">Logo WIFI</string>
    <string name="create_new_ok_card">Créer une OKCard</string>
    <string name="widget_error_no_ok_card">Vous n\'avez pas d\'OKCard de créer !!!</string>
    <string name="widget_message_sync">Synchronisation en cours</string>
    <string name="preference_file_key">Settings_ImOK</string>
    <string name="switch_preference">switch_preference</string>

    <string name="dialog_choice_type_title">Veillez choisir un type :</string>
    <string name="position_gps_rayon">Rayon (en mètres) :</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="open_map">Ouvrir carte</string>
    <string name="rationale_ask_ok">OK</string>
    <string name="rationale_ask_cancel">Annuler</string>

    <string name="popup_ask_all_permissions">Toutes les autorisations sont nécessaires pour le bon fonctionnement de cette application.</string>
    <string name="popup_ask_permission_internet">L\'accès à internet est nécessaire afin de pouvoir synchroniser les données de l\'application.</string>
    <string name="popup_ask_permission_access_fine_location">L\'accès à la géolocalisation est nécessaire afin de pouvoir vous localiser.</string>
    <string name="popup_ask_permission_wifi_state">L\'accès aux informations WIFI sont nécessaire afin de pouvoir les utiliser.</string>
    <string name="popup_ask_permission_send_sms">Le droit d\'envoyer des SMS est nécessaire pour le bon fonctionnement de cette application.</string>

    <string name="add_widget">Ajouter widget</string>
    <string name="widget_message_not_exist">C\'est OKCard n\'existe pas</string>
    <string name="toolbar_title_activity_configure_widget">Configuration</string>
    <string name="widget_choose_ok_card">Veuillez choisir une OKCard :</string>
    <string name="widget_connection">Veuillez vous connecter pour utiliser ce Widget :</string>
    <string name="widget_ok_cards_name">OKCards</string>
    <string name="widget_ok_card_name">OKCard</string>
    <string name="connection">Se connecter</string>
    <string name="coordonnee">Coordonnée :</string>
    <string name="find_adresse">Rechercher</string>
    <string name="channel_name_firebase_messaging_service">Information</string>
    <string name="channel_description_firebase_messaging_service">Notification information</string>
    <string name="channel_name_position">Position</string>
    <string name="channel_description_position">Notification de position</string>
    <string name="hint_enter_message">Ecrire un message</string>
    <string name="hint_enter_name">Entrer un nom</string>
    <string name="hint_latitude_tour_eiffel">48.8558986</string>
    <string name="hint_longitude_tour_eiffel">2.2980875</string>
    <string name="position_gps_rayon_default">50</string>
    <string name="hint_recipient_list">+33 892 70 12 39\n+33 176 41 04 64\n+33 153 92 82 82</string>

</resources>