<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.MainActivity">

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- IMAGE VIEW I'M OK -->
        <ImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_margin="@dimen/default_large_margin"
            android:background="@drawable/ic_logo"
            android:contentDescription="@string/content_description_logo" />

        <!-- TITLE I'M OK -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/app_name"
            android:textSize="@dimen/default_title_size"
            android:textStyle="bold" />

        <!-- DESCRIPTION I'M OK -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/main_activity_description"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTONS CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_large_margin"
            android:gravity="bottom"
            android:orientation="vertical">

            <!-- BUTTON LOGIN -->
            <uqac.inf872.projet.imok.views.RobotoButton
                android:id="@+id/main_activity_button_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:background="@drawable/button_radius_accent_color"
                android:padding="@dimen/default_large_margin"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                app:fontName="Roboto_Medium" />

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>