<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <uqac.inf872.projet.imok.views.RobotoTextView
        android:id="@+id/dialog_choice_type_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:text="@string/dialog_choice_type_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:fontName="Roboto_Bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_choice_type_title"
        android:orientation="horizontal">

        <uqac.inf872.projet.imok.views.RobotoButton
            android:id="@+id/dialog_choice_type_btn_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius_accent_color"
            android:text="@string/gps"
            android:textColor="#fff"
            android:textSize="18sp"
            app:fontName="Roboto_Bold" />

        <uqac.inf872.projet.imok.views.RobotoButton
            android:id="@+id/dialog_choice_type_btn_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius_accent_color"
            android:text="@string/wifi"
            android:textColor="#fff"
            android:textSize="18sp"
            app:fontName="Roboto_Bold" />
    </LinearLayout>
</RelativeLayout>