<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.activities.RecipientListActivity">

    <LinearLayout
        android:id="@+id/recipient_list_btn"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <uqac.inf872.projet.imok.views.RobotoButton
            android:id="@+id/recipient_list_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:fontNameButton="Roboto_Medium" />

        <uqac.inf872.projet.imok.views.RobotoButton
            android:id="@+id/recipient_list_btn_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:fontNameButton="Roboto_Medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipient_list_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/recipient_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/recipient_list_destinataires"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:inputType="textMultiLine"
            android:textAlignment="center" />
    </LinearLayout>

    <uqac.inf872.projet.imok.views.RobotoButton
        android:id="@+id/recipient_list_btn_delete"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:background="@color/colorError"
        android:startOffset="500"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:fontNameButton="Roboto_Medium" />

</RelativeLayout>