<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.activities.PositionActivity">

    <LinearLayout
        android:id="@+id/position_btn"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <uqac.inf872.projet.imok.views.RobotoButton
            android:id="@+id/psoition_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:fontName="Roboto_Medium" />

        <uqac.inf872.projet.imok.views.RobotoButton
            android:id="@+id/position_btn_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:fontName="Roboto_Medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/position_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/position_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@android:color/black"
            android:contentDescription="@string/position_image_description" />

        <EditText
            android:id="@+id/position_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage" />
    </LinearLayout>

    <uqac.inf872.projet.imok.views.RobotoButton
        android:id="@+id/position_btn_delete"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:background="@color/colorError"
        android:startOffset="500"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:fontName="Roboto_Medium" />

</RelativeLayout>